--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "gatsby": "^2.19.7",
     "gatsby-plugin-typography": "^2.3.23",
+    "gatsby-source-filesystem": "^2.1.50",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-typography": "^0.16.19",
