--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,3 +21,4 @@ collections:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "GPS", name: "gps", widget: "file" }
