--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@react-google-maps/api": "^1.8.5",
     "gatsby": "^2.19.7",
     "gatsby-plugin-typography": "^2.3.23",
     "gatsby-source-filesystem": "^2.1.50",
+    "gatsby-transformer-json": "^2.2.27",
     "gatsby-transformer-remark": "^2.6.55",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
